--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.com.example=trace
 #\u6307\u5B9A\u65E5\u5FD7\u751F\u6210\u65E5\u5FD7\u6587\u4EF6
 logging.file=springbootdemom.log
 logging.path=/spring/log
+
+spring.messages.basename=i18n.index
