--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&amp&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+    #schema: [classpath:department.sql,classpath:employee.sql]
   jpa:
     hibernate:
       ddl-auto: update
