solver mysql connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #server.servlet.context-path=/crud
-server.port=8080
+server.port=80
 
 spring.thymeleaf.cache=false
 
 spring.mvc.favicon.enabled=true
-
+#\u9759\u6001\u8D44\u6E90\u6620\u5C04
 #spring.mvc.static-path-pattern=/**
+#\u9759\u6001\u8D44\u6E90\u8BBF\u95EE\u8DEF\u5F84
 #spring.resources.static-locations=classpath/static/
 
 #\u5C06com.example\u91CC\u9762\u7684\u7C7B\u7684\u7EA7\u522B\u8C03\u6210trace
